<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".userpage">

    <Button
        android:id="@+id/button_delete"
        android:layout_width="280dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/delete"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:text="@string/update"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_delete"
        app:layout_constraintVertical_bias="0.705"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="283dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="83dp"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/button_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="29dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="200dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_user"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toStartOf="@+id/button_add"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />
</android.support.constraint.ConstraintLayout>